Improved prevent jump for full width rows
This fix makes styling JS not always required.

--- a/css/front.less
+++ b/css/front.less
@@ -43,6 +43,6 @@
 	padding-left: 1000px;
 }
 
-body.siteorigin-panels-before-styling {
+body.siteorigin-panels-before-js {
 	overflow-x: hidden;
 }
